2011-03-09  Roland Steiner  <rolandsteiner@chromium.org>

        Unreviewed: yet more tweaking of the chromium test expectations.

        * platform/chromium/test_expectations.txt:

2011-03-09  Roland Steiner  <rolandsteiner@chromium.org>

        Unreviewed: fix chromium test expectations file.

        * platform/chromium/test_expectations.txt:

2011-03-09  Roland Steiner  <rolandsteiner@chromium.org>

        Unreviewed: update chromium test expectations

        * platform/chromium/test_expectations.txt:

2011-03-08  Ilya Tikhonovsky  <loislo@chromium.org>

        Reviewed by Pavel Feldman.

        Web Inspector: remove groupName from objectId.
        https://bugs.webkit.org/show_bug.cgi?id=55825

        * inspector/protocol/runtime-agent-expected.txt:

2011-03-08  Xiaomei Ji  <xji@chromium.org>

        Unreviewed.

        Add tests introduced in r80622 as expect to fail for now, rebase later.

        * platform/chromium/test_expectations.txt:

2011-03-08  Xiaomei Ji  <xji@chromium.org>

        Reviewed by David Hyatt.

        Fix Regression: Content not drawn when scrolling horizontally in an RTL page.
        https://bugs.webkit.org/show_bug.cgi?id=55077.

        * fast/dom/scroll-reveal-left-overflow.html: Added.
        * fast/dom/scroll-reveal-top-overflow.html: Added.
        * platform/mac/fast/dom/scroll-reveal-left-overflow-expected.checksum: Added.
        * platform/mac/fast/dom/scroll-reveal-left-overflow-expected.png: Added.
        * platform/mac/fast/dom/scroll-reveal-left-overflow-expected.txt: Added.
        * platform/mac/fast/dom/scroll-reveal-top-overflow-expected.checksum: Added.
        * platform/mac/fast/dom/scroll-reveal-top-overflow-expected.png: Added.
        * platform/mac/fast/dom/scroll-reveal-top-overflow-expected.txt: Added.

2011-03-08  Gavin Barraclough  <barraclough@apple.com>

        Reviewed by Sam Weinig

        Bug 55994 - Functions on Array.prototype should check length first.